11-ingress-targetIP/app2nginx-deployment-clusterIP.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-nginx-deployment
  labels:
    app: app2-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-nginx
  template:
    metadata:
      labels:
        app: app2-nginx
    spec:
      containers:
      - name: app2-nginx
        image: kube-nginxapp1:2.0.0
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app2-nginx-clusterip-service
  labels:
    app: app2-nginx
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html  
spec:
  selector:
    app: app2-nginx
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
